--- a/dataflow/flex-templates/salesforce-to-txt/pom.xml
+++ b/dataflow/flex-templates/salesforce-to-txt/pom.xml
@@ -27,6 +27,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.akvelon</groupId>
+            <artifactId>salesforce-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>io.cdap.cdap</groupId>
             <artifactId>cdap-api-common</artifactId>
             <version>${cdap.version}</version>
