--- a/dataflow/ml/salesforce/pytorch/anomaly_detection/pipeline/Dockerfile
+++ b/dataflow/ml/salesforce/pytorch/anomaly_detection/pipeline/Dockerfile
@@ -7,7 +7,7 @@ ADD . .
 RUN python3 -m pip install hdbscan torch autoembedder category-encoders
 RUN python3 setup.py install
 
-RUN python3 -m pip install -U apache-beam[gcp]==2.45.0
+RUN python3 -m pip install -U apache-beam[gcp]
 
 EXPOSE 8088
 ENTRYPOINT python3 -m expansion_service -p 8088 --fully_qualified_name_glob "*"
