--- a/dataflow/flex-templates/pom.xml
+++ b/dataflow/flex-templates/pom.xml
@@ -27,6 +27,7 @@
         <module>salesforce-to-txt</module>
         <module>salesforce-to-bigquery</module>
         <module>salesforce-common</module>
+        <module>hubspot-to-pubsub</module>
     </modules>
 
     <properties>
@@ -94,7 +95,7 @@
         <dependency>
             <groupId>org.apache.beam</groupId>
             <artifactId>beam-sdks-java-io-sparkreceiver-2</artifactId>
-            <version>2.45.13</version>
+            <version>2.45.0</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
