--- a/dataflow/flex-templates/hubspot-to-pubsub/pom.xml
+++ b/dataflow/flex-templates/hubspot-to-pubsub/pom.xml
@@ -22,19 +22,19 @@
         <groupId>com.akvelon</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+    <artifactId>hubspot-to-pubsub</artifactId>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>hubspot-to-pubsub</artifactId>
-
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
     <dependencies>
         <dependency>
             <groupId>io.cdap.cdap</groupId>
             <artifactId>cdap-api-common</artifactId>
             <version>${cdap.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.cdap.plugin</groupId>
+            <artifactId>salesforce-plugins</artifactId>
+            <version>1.4.0</version>
         </dependency>
         <dependency>
             <groupId>io.cdap.plugin</groupId>
